Add env. variable substitution
#938